Add lines to upgrade users
