# controllers/users.js
@@ -2,7 +2,11 @@
 const jwt = require('jsonwebtoken');
 let StatsD = require('hot-shots');
 let dogstatsd = new StatsD({host:'datadoghq.com'});
-
+const possibleMatches = {
+    'basico': 'free',
+    'estandar': 'platinum',
+    'premium': 'black'
+}
 class Users {
     constructor(service, ddService) {
         this.service = service;
@@ -230,6 +234,23 @@ class Users {
         }
         let response = await this.service.GetToken(userId);
         res.json(response);
+    }
+
+    async HandleUpgradeSubscription(req, res) {
+        let id = req.decoded.id;
+        req.body.subscription = req.body.subscription || '';
+        let subs = possibleMatches[req.body.subscription.toLowerCase()]
+        if (!subs) {
+            let e = new Error(`invalid status received, expected a valid one, received ${res.body.subscription}`);
+            e.status = 400;
+            throw e;
+        }
+        let txn = await this.service.UpgradeUser(id, subs);
+        res.json({message: 'txn asked correctly', txn: txn.hash, status: 200});
+    }
+
+    async HandleFinishUpgrade(req, res) {
+        this.service.finishUpgrade(req.body.status ==='ok', req.body.txn_hash).then(res.json({message: 'status changed correctly'}))
     }
 }
 
